--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -1,11 +1,9 @@
 
-// Body
-$body-bg: #f8fafc;
-
-// Typography
-$font-family-sans-serif: "Nunito", sans-serif;
-$font-size-base: 0.9rem;
-$line-height-base: 1.6;
+//General
+$img-path: '/img/background/background.png';
+$default-font: 'Lato', sans-serif;
+$header-font: 'Roboto Condensed', sans-serif;
+$footer-height: 60;
 
 // Colors
 $blue: #3490dc;
@@ -18,3 +16,4 @@ $yellow: #ffed4a;
 $green: #38c172;
 $teal: #4dc0b5;
 $cyan: #6cb2eb;
+$white: #f3eeee;
