--- a/public/css/app.css
+++ b/public/css/app.css
@@ -16346,7 +16346,7 @@ html {
 
 body {
   /* Margin bottom by footer height */
-  margin-bottom: 80px;
+  margin-bottom: 90px;
 }
 
 .footer {
@@ -16354,7 +16354,7 @@ body {
   bottom: 0;
   width: 100%;
   /* Set the fixed height of the footer here */
-  height: 80px;
+  height: 90px;
   background-color: #f3eeee;
 }
 
@@ -16368,6 +16368,14 @@ body {
     /* Set the fixed height of the footer here */
     height: 60px;
   }
+}
+
+/*-------------------------------------------*/
+
+/*-----------CollapseSerachBar---------------*/
+
+#collapseSearchBar {
+  width: 100%;
 }
 
 /*-------------------------------------------*/
