Add main search page

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -16378,5 +16378,15 @@ body {
   width: 100%;
 }
 
-/*-------------------------------------------*/
+/*---------------Main content----------------*/
+
+.graduate-card__avatar {
+  background-color: #ececec;
+}
+
+@media (min-width: 576px) {
+  .graduate-card img {
+    border-radius: 50%;
+  }
+}
 
