--- a/public/css/app.css
+++ b/public/css/app.css
@@ -16392,6 +16392,60 @@ body {
   }
 }
 
+.graduate-card__img {
+  position: relative;
+  transition: all 0.4s ease-in-out;
+  cursor: pointer;
+}
+
+.graduate-card__img:hover {
+  -webkit-transform: scale(0.9);
+          transform: scale(0.9);
+}
+
+.graduate-card__img:hover .graduate-card__img--file {
+  opacity: 0.6;
+}
+
+.graduate-card__img:hover .graduate-card__img--link {
+  display: block;
+  text-decoration: none;
+}
+
+.graduate-card__img .graduate-card__img--file {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  transition: all 0.4s ease-in-out;
+}
+
+.graduate-card__img .graduate-card__img--link {
+  display: none;
+  font-size: 1.5rem;
+  letter-spacing: 0.5rem;
+  font-family: "Roboto Condensed", sans-serif;
+  position: absolute;
+  top: 50%;
+  right: 50%;
+  -webkit-transform: translate(50%, -50%);
+          transform: translate(50%, -50%);
+  transition: all 0.4s ease-in-out;
+}
+
+@media (min-width: 992px) {
+  .graduate-card__img .graduate-card__img--link {
+    font-size: 2.5rem;
+    letter-spacing: 0.8rem;
+  }
+}
+
+@media (min-width: 1200px) {
+  .graduate-card__img .graduate-card__img--link {
+    font-size: 3.5rem;
+    letter-spacing: 1rem;
+  }
+}
+
 /*--------Go up button/circle buttons---------*/
 
 .btn-circle {
