Add messages after login and register

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -16331,6 +16331,11 @@ body {
   font-family: "Lato", sans-serif;
 }
 
+body .header-font {
+  font-family: "Roboto Condensed", sans-serif;
+  letter-spacing: 0.2rem;
+}
+
 .navbar,
 .v-b-font {
   font-family: "Roboto Condensed", sans-serif;
