Upgrade creation feature

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -16466,3 +16466,10 @@ body {
   z-index: 2000;
 }
 
+/*--------------File Buttons-------------------*/
+
+input[type=file] {
+  padding: 0;
+  line-height: 200%;
+}
+
