--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -165,3 +165,25 @@ input[type='file']{
   padding: 0;
   line-height: 200%;
 }
+
+/*-----------Sliders--------------*/
+
+.carousel-inner{
+
+  img{
+    border-radius: 1%;
+  }
+
+  .carousel-caption-new{
+    position: absolute;
+    bottom: 20px;
+    z-index: 10;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    color: #f3eeee;
+    text-align: center;
+    background-color: rgba(128,128,128,.95);
+    width: 100%;
+  }
+
+}
